...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerServiceType"
        android:layout_width="337dp"
        android:layout_height="53dp"
        android:layout_marginTop="26dp"
        android:entries="@array/service_types"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignUpTitle" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="348dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Full name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/spinnerServiceType"
        app:layout_constraintStart_toStartOf="@+id/spinnerServiceType"
        app:layout_constraintTop_toBottomOf="@+id/spinnerServiceType" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="348dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Description"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/editTextName"
        app:layout_constraintStart_toStartOf="@+id/editTextName"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextPhoneNumber"
        android:layout_width="345dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Phone Number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/editTextDescription"
        app:layout_constraintStart_toStartOf="@+id/editTextDescription"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="347dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/editTextPhoneNumber"
        app:layout_constraintStart_toStartOf="@+id/editTextPhoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhoneNumber" />

    <EditText
        android:id="@+id/editTextCost"
        android:layout_width="345dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Cost"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextCapacity"
        android:layout_width="344dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:ems="10"
...
        app:layout_constraintEnd_toEndOf="@+id/editTextCost"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="@+id/editTextCost"
        app:layout_constraintTop_toBottomOf="@+id/editTextCost" />

    <Button
        android:id="@+id/btnCreateVendor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="onCreateVendorBtnClick"
        android:text="Create Vendor"
        app:layout_constraintBottom_toBottomOf="parent"
...
