<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="7dp"
    tools:context=".presentation.EventManipulationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/static_event_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxWidth="300dp"
                android:maxLines="1"
                android:padding="10dp"
                android:text="@string/static_new_event"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/new_event_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="description"
                android:hint="@string/description"
                android:importantForAutofill="yes"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:textAlignment="textStart"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@+id/event_field_description"
                app:layout_constraintTop_toBottomOf="@+id/event_field_description" />

            <EditText
                android:id="@+id/new_event_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="date"
                android:focusableInTouchMode="false"
                android:hint="@string/date_format"
                android:importantForAutofill="yes"
                android:inputType="date"
                android:padding="10dp"
                android:textAlignment="textStart"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@+id/event_field_date"
                app:layout_constraintTop_toBottomOf="@+id/event_field_date" />

            <EditText
                android:id="@+id/new_event_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="time"
                android:focusableInTouchMode="false"
                android:hint="@string/time_format"
                android:importantForAutofill="yes"
                android:inputType="time"
                android:padding="10dp"
                android:textAlignment="textStart"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@+id/event_field_time"
                app:layout_constraintTop_toBottomOf="@+id/event_field_time" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="7dp"
                android:onClick="returnToMainActivity"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp"
                android:text="@android:string/cancel"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/create_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_event_time" />

            <Button
                android:id="@+id/create_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="createNewEvent"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp"
                android:text="@string/create"
                android:textSize="30sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/cancel_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cancel_button" />

            <EditText
                android:id="@+id/new_event_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:hint="@string/name"
                android:importantForAutofill="yes"
                android:inputType="text"
                android:maxLength="50"
                android:padding="10dp"
                android:textAlignment="textStart"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@+id/event_field_name"
                app:layout_constraintTop_toBottomOf="@+id/event_field_name" />

            <EditText
                android:id="@+id/new_event_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="postalAddress"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:padding="10dp"
                android:textAlignment="textStart"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@+id/event_field_address"
                app:layout_constraintTop_toBottomOf="@+id/event_field_address" />

            <TextView
                android:id="@+id/event_field_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:padding="10dp"
                android:text="@string/event_name"
                android:textAlignment="textStart"
                android:textSize="26sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/static_event_name" />

            <TextView
                android:id="@+id/event_field_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:padding="10dp"
                android:text="@string/event_description"
                android:textAlignment="textStart"
                android:textSize="26sp"
                app:layout_constraintStart_toStartOf="@+id/new_event_name"
                app:layout_constraintTop_toBottomOf="@+id/new_event_name" />

            <TextView
                android:id="@+id/event_field_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:padding="10dp"
                android:text="@string/location_field"
                android:textSize="26sp"
                app:layout_constraintStart_toStartOf="@+id/new_event_description"
                app:layout_constraintTop_toBottomOf="@+id/new_event_description" />

            <TextView
                android:id="@+id/event_field_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:padding="10dp"
                android:text="@string/event_date_field"
                android:textAlignment="textStart"
                android:textSize="26sp"
                app:layout_constraintStart_toStartOf="@+id/new_event_location"
                app:layout_constraintTop_toBottomOf="@+id/new_event_location" />

            <TextView
                android:id="@+id/event_field_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:padding="10dp"
                android:text="@string/event_time_field"
                android:textAlignment="textStart"
                android:textSize="26sp"
                app:layout_constraintStart_toStartOf="@+id/new_event_date"
                app:layout_constraintTop_toBottomOf="@+id/new_event_date" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>